--- a/source/Sample/Views/Home/Contact.cshtml
+++ b/source/Sample/Views/Home/Contact.cshtml
@@ -15,3 +15,12 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<form method="POST">
+    @Html.FlushedAntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
+
+    <input type="text" name="name" value="Nik"/>
+    @Html.Raw(ViewBag.Tag)
+    <button type="submit">Submit</button>
+</form>
