added support for multiple layout pages (master page) and header files.

--- a/source/Sample/Views/Shared/_Layout_Alternative.cshtml
+++ b/source/Sample/Views/Shared/_Layout_Alternative.cshtml
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div class="container body-content">
+        <h1>This is an alternative layout page.</h1>
         @RenderBody()
         <hr />
         <footer>
